--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,9 @@
     <build_depend>cv_bridge</build_depend>
     <build_depend>image_transport</build_depend>
     <build_depend>camera_info_manager</build_depend>
+    <build_depend>pcl_ros</build_depend>
+    <build_depend>sensor_msgs</build_depend>
+    <build_depend>message_filters</build_depend>
 
     <run_depend>cmake_modules</run_depend>
     <run_depend>roscpp</run_depend>
@@ -25,6 +28,9 @@
     <run_depend>cv_bridge</run_depend>
     <run_depend>image_transport</run_depend>
     <run_depend>camera_info_manager</run_depend>
+    <run_depend>pcl_ros</run_depend>
+    <run_depend>sensor_msgs</run_depend>
+    <run_depend>message_filters</run_depend>
 
     <export>
     </export>
